src/qt/res/css/drk-1.css
WalletFrame {
border-image: url(':/images/drk-1_walletFrame_bg') 0 0 0 0 stretch stretch;
border-top:0px solid #000;
margin:0;
padding:0;
}

QStatusBar {
background-color:#ffffff;
}

.QFrame {
background-color:transparent;
border:0px solid #fff;
}

QMenuBar {
background-color:#fff;
}

QMenuBar::item {
background-color:#fff;
}

QMenuBar::item:selected {
background-color:#f8f6f6;
}

QMenu {
background-color:#f8f6f6;
}

QMenu::item {
color:#333;
}

QMenu::item:selected {
background-color:#f2f0f0;
color:#333;
}

QToolBar {
background-color:#9e0a0a;
border:0px solid #000;
padding:0;
margin:0;
}

QToolBar > QToolButton {
background-color:#9e0a0a;
border:0px solid #333;
min-height:2.5em;
padding: 0em 1em;
font-weight:bold;
color:#fff;
}

/*******************************/
/* TEXT:  TOTAL AVAILABLE DNET */
/*******************************/

QToolBar > QToolButton:checked {
background-color:#fff;
color:#999999;
font-weight:bold;
}

QMessageBox {
background-color:#F8F6F6;
}

/*******************************/
/* BASE TEXT SIZE AND COLOR    */
/*******************************/

QLabel {
font-size:12px;
color:#333333;
}

/*******************************/
/* CHECK BOX LABELS            */
/*******************************/

.QCheckBox {
color:#333333;
background-color:transparent;
}

.QCheckBox:hover {
background-color:transparent;
}

/*******************************/
/* TEXT ENTRY FIELDS           */
/*******************************/

.QValidatedLineEdit, .QLineEdit {
border: 1px solid #9e0a0a;
font-size:11px;
min-height:25px;
outline:0;
padding:3px;
background-color:#fcfcfc;
}

.QLineEdit:!focus {
font-size:12px;
}

.QValidatedLineEdit:disabled, .QLineEdit:disabled {
background-color:#f2f2f2;
}

/*******************************/
/* GLOBAL BUTTON STYLE         */
/*******************************/

QPushButton {
background-color:transparent;
border:1px solid #ffffff;
border-radius:3px;
color:#ffffff;
font-size:12px;
padding-left:25px;
padding-right:25px;
padding-top:5px;
padding-bottom:5px;
}

QPushButton:hover {
background-color:transparent;
border:1px solid #ffffff;
border-radius:3px;
color:#ffffff;
}

QPushButton:focus {
background-color:transparent;
border:1px solid #ffffff;
border-radius:3px;
color:#ffffff;
}

QPushButton:pressed {
background-color:transparent;
border:1px solid #ffffff;
border-radius:3px;
color:#ffffff;
}

/*******************************/
/* DROP DOWN MENUS             */
/*******************************/

QComboBox {
border:1px solid #9e0a0a;
padding: 3px 5px 3px 5px;
background:#fcfcfc;
min-height:25px;
color:#818181;
}

QComboBox:checked {
background:#f2f2f2;
}

QComboBox:editable {
background: #9e0a0a;
color:#616161;
border:0px solid transparent;
}

QComboBox::drop-down {
width:25px;
border:0px;
}

QComboBox::down-arrow {
border-image: url(':/images/drk_downArrow') 0 0 0 0 stretch stretch;
}

QComboBox QListView {
background:#fff;
border:1px solid #333;
padding-right:1px;
padding-left:1px;
}

QComboBox QAbstractItemView::item { margin:4px; }

QComboBox::item {
color:#818181;
}

QComboBox::item:alternate {
background:#fff;
}

QComboBox::item:selected {
border:0px solid transparent;
background:#f2f2f2;
}

QComboBox::indicator {
background-color:transparent;
selection-background-color:transparent;
color:transparent;
selection-color:transparent;
}

QAbstractSpinBox {
border:1px solid #9e0a0a;
padding: 3px 5px 3px 5px;
background:#fcfcfc;
min-height:25px;
color:#818181;
}

QAbstractSpinBox::up-button {
subcontrol-origin: border;
subcontrol-position: top right;
width:21px;
background:#fcfcfc;
border-left:0px;
border-right:1px solid #9e0a0a;
border-top:1px solid #9e0a0a;
border-bottom:0px;
padding-right:1px;
padding-left:5px;
padding-top:2px;
}

QAbstractSpinBox::up-arrow {
image:url(':/images/drk_upArrow_small');
}

QAbstractSpinBox::down-button {
subcontrol-origin: border;
subcontrol-position: bottom right;
width:21px;
background:#fcfcfc;
border-top:0px;
border-left:0px;
border-right:1px solid #9e0a0a;
border-bottom:1px solid #9e0a0a;
padding-right:1px;
padding-left:5px;
padding-bottom:2px;
}

QAbstractSpinBox::down-arrow {
image:url(':/images/drk_downArrow_small');
}

/*******************************/
/* TABLE HEADER                */
/*******************************/

QHeaderView {
background-color:transparent;
}

/*******************************/
/* TABLE HEADER SECTIONS       */
/*******************************/

QHeaderView::section {
qproperty-alignment:center;
background-color:qlineargradient(x1: 0, y1: 0, x2: 0, y2: 0.25, stop: 0 #9e0a0a, stop: 1 #9e0a0a);
color:#fff;
min-height:25px;
font-weight:bold;
font-size:11px;
outline:0;
border:0px solid #fff;
border-right:1px solid #fff;
padding-left:5px;
padding-right:5px;
padding-top:2px;
padding-bottom:2px;
}

QHeaderView::section:last {
border-right: 0px solid #d7d7d7;
}

.QScrollArea {
background:transparent;
border:0px;
}

.QTableView {
background:transparent;
border:0px solid #fff;
}

/*******************************/
/* TABLE ITEM                  */
/*******************************/

QTableView::item {
background-color:#fcfcfc;
font-size:12px;
}

/*******************************/
/* TABLE ITEM SELECTED         */
/*******************************/

QTableView::item:selected {
background-color:#f0f0f0;
color:#9e0a0a;
}

/*******************************/
/* SCROLL BAR                  */
/*******************************/

QScrollBar {

}

/*******************************/
/* VERTICLE SCROLL BAR         */ 
/* ATTRIBUTES                  */
/*******************************/

QScrollBar:vertical {
border:0;
background:#ffffff;
width:18px;
margin: 18px 0px 18px 0px;
}

/*******************************/
/* HORIZONTAL SCROLL BAR       */ 
/* ATTRIBUTES                  */
/*******************************/

QScrollBar:horizontal {
border:0;
background:#ffffff;
height:18px;
margin: 0px 18px 0px 18px;
}
/* ... */

